<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_main" translatable="false">E-Mandi</string>
    <string name="app_name">E-Mandi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="Mandi">Mandi Prices</string>
    <string name="stocks">Stocks</string>
    <string name="crop">Crop</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="expected_ready">Expected date of harvest</string>
    <string name="date_posted">Date Created</string>
    <string name="contact">Contact</string>
    <string name="crop_value">Value of crop</string>
    <string name="location_value">Location</string>
    <string name="which_crop">Name of the crop</string>
    <string name="str_my_crops">My crops</string>
    <string name="str_my_req">My Bids</string>
    <string name="crop_type">Variety:</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="estimated_time_of_completion">Expected date of harvest</string>
    <string name="offer_price">Initial Expected Price</string>
    <string name="rs">Rs </string>
    <string name="available_for_bidding">Available for bidding</string>
    <string name="expDate">Expiration date for bidding</string>
    <string name="add_stock">Add stock</string>
    <string name="_0_kg">0 kg</string>
    <string name="quantity2">Quantity:</string>
    <string name="_12_4_2005">12/4/2005</string>
    <string name="_1234">1234</string>
    <string name="error_please_check_internet">Please check your internet connection</string>
    <string name="error_request_timed_out">Request timed out</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="you_are_here">You are here</string>
    <string name="maddress_and_lorem">mAddress and Lorem</string>
    <string name="multi">This is my home number \n It is GNoida \n OkaY</string>
    <string name="cropNameError">Add crop name</string>
    <string name="cropTypeError">Please specify a type</string>
    <string name="cropQuanityError">This can not be zero</string>
    <string name="offerPriceError">This can not be zero</string>
    <string name="etEstError">Please add the expected date of harvest</string>
    <string name="addressError">Location can not be empty</string>
    <string name="expError">Add an expiration date of the bid</string>
    <string name="date_of_start">Date of sowing: </string>
    <string name="view_bid_history">View bid history</string>
    <string name="cancel_stock">Delete Crop</string>
    <string name="_918">918</string>
    <string name="hello_world_person">Hello World Person</string>
    <string name="rs_45602">Rs 45602</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="price_rs">Price(Rs)</string>
    <string name="cancel_bid">Delete bid</string>
    <string name="bid">Bid</string>
    <string name="emptyBidError">Bid price can not be empty</string>
    <string name="lesserBidError">Place a lower value in the bid</string>
    <string name="Language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="invalidOtp">The OTP is invalid</string>
    <string name="invalidPhoneError">The phone number is invalid</string>
    <string name="address">Address</string>
    <string name="area">Area of farm</string>
    <string name="emptyName">Name can not be empty</string>
    <string name="invalidName">The name is invalid</string>
    <string name="emptyAreaError">Area can not be empty</string>
    <string name="cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="changeLanguage">Change language</string>
    <string name="changeCurrentLanguage">Change the language</string>
    <string name="helpForPage">Get a walk through</string>
    <string name="Notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="bigha">Bigha</string>
    <string name="searchHint">Search the crops</string>
    <string name="details">Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchBuyers">Search buyers</string>
    <string name="delta">delta</string>
    <string name="modifyBid">Modify bid</string>
    <string name="myBid">My bid Price: </string>
    <string name="bidAPrice">Enter price</string>
    <string name="confirmation">Confirmation</string>
    <string name="tvDesc">Please note the following changes before adding the bid.</string>
    <string name="initPrice">Price demanded for crop:</string>
    <string name="myBidPrice">Price you are adding</string>
    <string name="noChangeInBid">No change in bid</string>
    <string name="modifyStock">Modify crop</string>
    <string name="supplyDeleted">Crop deleted successfully</string>
    <string name="supplyUpdated">Crop updated successfully</string>
    <string name="cancelStock">Delete crop</string>
    <string name="no">No</string>
    <string name="description">Description: </string>
    <string name="modifyCrop">Modify crop</string>
    <string name="supplyAdded">Crop  added successfully</string>
    <string name="couldNotLoadSupplies">Could not load crops</string>
    <string name="couldNotLoadBids">Could not load active bids</string>
    <string name="suppliesLoaded">Stocks loaded successfully</string>
    <string name="noSupplyAct">You do not have any active crops for bidding as of now</string>
    <string name="noDemandAct">You do not have any active bids as of now</string>
    <string name="noSupply">You have not yet added any crop for bidding</string>
    <string name="demanndLoaded">My demands loaded</string>
    <string name="noDemand">You have not yet bid on any crop</string>
    <string name="cancelBid">Delete bid?</string>
    <string name="bidUpdated">Bid updated successfully</string>
    <string name="BidDeleted">Bid deleted successfully.</string>
    <string name="newBidPrice">New bid price:</string>
    <string name="invalidRequest">Request is invalid.</string>
    <string name="quotaRequest">Quota of requests exceeded. Please try again after some time.</string>
    <string name="loginSuceed">Login successful</string>
    <string name="loginNew">Phone Number not registered.</string>
    <string name="_91">+91</string>
    <string name="otpSend">The OTP has been sent to: </string>
    <string name="otpResend"><b>Resend OTP</b></string>
    <string name="otpResendInit">Not triggered</string>
    <string name="resendIn">Resend OTP in <b>%s s</b> </string>
    <string name="invalidCredentials">Invalid OTP</string>
    <string name="addNumber">Add your number</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code</string>
    <string name="pleaseOtp">.\nPlease enter the OTP here</string>
    <string name="loggingIn">Logging in</string>
    <string name="signUpSuccess">Registeration successful.</string>
    <string name="failedLogin">Failed to log in. Please try again later.</string>
    <string name="kg">kg</string>
    <string name="NotFound">Not found</string>
    <string name="graphTitle">Bid history</string>
    <string name="graphError">Graph not available</string>
    <string name="howMuchGrown">How much is grown?</string>
    <string name="InVillage">In Village:</string>
    <string name="InVDistrict">In district:</string>
    <string name="InState">In state:</string>
    <string name="InCountry">In country:</string>
    <string name="currentBid">Current Bid:</string>
    <string name="successfullBidAdd">Bid added successfully</string>
    <string name="i_also_want_to_grow_crop">Add this?</string>
    <string name="village">Village</string>
    <string name="numberVerifed">Phone number verified</string>
    <string name="searchHead">Search Crop</string>
    <string name="emptyRV">No bids found.</string>
    <string name="mySupplyHistory">Supply History</string>
    <string name="myBidHistory">Bid History</string>
    <string name="current_bid">Current Bid</string>
    <string name="initial_expected_price">Initial Expected Price</string>
    <string name="initial_offer_price">Initial Offer Price</string>
    <string name="graphDataSet">Price vs Time Graph</string>
    <string name="supplyHistorySuccess">Supply history retrieved successfully</string>
    <string name="lastPrice">Last Price</string>
    <string name="activeSupply">Stock is active</string>
    <string name="inactiveSupply">Stock is inactive</string>
    <string name="bidHistorySucess">Retrieved Bid history successfully</string>
    <string name="activeBid">Bid is active</string>
    <string name="inactiveBid">Bid is inactive</string>
    <string name="dateOfSowing">Date of sowing</string>
    <string name="etSowError">Please add the date of sowing</string>
    <string name="GrowthAdded">Growth added successfully</string>
    <string name="add_growth">Add growth</string>
    <string name="lastModified">Last Modified:</string>
    <string name="variety">"Variety: "</string>
    <string name="time">Time</string>
    <string name="i">i</string>
    <string name="call">Call</string>
    <string name="canNotCall">Can not make call</string>
    <string name="permissionPhone">Permission to dial call from this app.</string>
    <string name="permissionHead">Permission Needed</string>
    <string name="ok">OKAY</string>
    <string name="sendingOTp">"Sending OTP to "</string>
    <string name="num_000000000">9090909090</string>
    <string name="otpSent">OTP sent</string>
    <string name="successOTP">OTP retrieved successfully</string>
    <string name="permissionRequired">Permission required</string>
    <string name="permissionMessageLocation">Permission to access location is required.</string>
    <string name="allow">Allow</string>
    <string name="unableToOpenMaps">Unable to open maps</string>
    <string name="register">Register</string>
    <string name="creatinguser">Creating User</string>
    <string name="eMandi">E-Mandi</string>
    <string name="desc">Update the crop details</string>
    <string name="no_bids_founds">No bids founds</string>
    <string name="noDesc">-</string>
    <string name="etEstLessThanSow">The crop can not be harvested before sowing</string>
    <string name="etEstLessIncomplete">The date of crop harvest should be at least after 20 days of sowing</string>
    <string name="expLess">Expiration date of the bid can not be before the date of sowing</string>
    <string name="rice">Rice</string>
    <string name="wheat">Wheat</string>
    <string name="maize">Maize</string>
    <string name="barley">Barley</string>
    <string name="potato">Potato</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="sugarcane">Sugarcane</string>
    <string name="capsicum">Capsicum</string>
    <string name="brinjal">Brinjal</string>
    <string name="sugar">Sugar</string>
    <string name="confirm">Confirm</string>
    <string name="adding_crop">Adding crop %s (%s %s)\nInitial expected price %s %s</string>
    <string name="adding_bid_date">Bid ends on %s</string>
</resources>