<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_supply">


    <fragment
        android:id="@+id/nav_supply"
        android:name="com.example.mandiexe.ui.supply.MySuppliesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/my_supplies_fragment">
        <action
            android:id="@+id/action_nav_supply_to_nav_bids"
            app:destination="@id/nav_bids" />
    </fragment>

    <fragment
        android:id="@+id/nav_supply_history"
        android:name="com.example.mandiexe.ui.home.FarmerSupplyHistory"
        android:label="@string/mySupplyHistory"
        tools:layout="@layout/farmer_supply_history_fragment" />


    <fragment
        android:id="@+id/nav_bid_history"
        android:name="com.example.mandiexe.ui.home.FarmerBidHistory"
        android:label="@string/myBidHistory"
        tools:layout="@layout/farmer_bid_history_fragment" />

    <fragment
        android:id="@+id/nav_bids"
        android:name="com.example.mandiexe.ui.bids.MyBidsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/my_bids_fragment" />


</navigation>