<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/space"
    android:layout_margin="@dimen/space"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ownerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space"
        android:padding="@dimen/space"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name" />


    <TextView
        android:id="@+id/ownerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space"
        android:padding="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/ownerName"
        tools:text="@string/phone_number" />

    <TextView
        android:id="@+id/ownerAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space"
        android:padding="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/ownerPhone"
        tools:text="@string/address" />



</androidx.constraintlayout.widget.ConstraintLayout>