<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.BidDetailHistoryFragment">

        <TextView
            android:id="@+id/tv_bid_history_crop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Rice" />

        <TextView
            android:id="@+id/tv_bid_history_crop_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/_0_kg" />

        <TableRow
            android:id="@+id/tv_headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space"
            android:layout_marginEnd="@dimen/space"
            android:layout_marginBottom="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/tv_bid_history_crop_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rank"
                android:textColor="@color/wildColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_half"
                android:layout_weight="2.5"
                android:maxLines="2"
                android:text="@string/name"
                android:textColor="@color/wildColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/date"
                android:textColor="@color/wildColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price_rs"
                android:textColor="@color/wildColor"
                android:textStyle="bold" />


        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            style="@style/styleRv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headings"
            tools:listitem="@layout/item_bid_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>