<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_crop_bids_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.supply.MyCropBidDetails">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mLayoutSup"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_my_crops_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mDetQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/crop_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_crop_name" />

        <TextView
            android:id="@+id/tv_stock_detail_crop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Rice" />


        <TextView
            android:id="@+id/tv_stock_detail_crop_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space"
            android:layout_marginTop="@dimen/space_half"
            app:layout_constraintBottom_toBottomOf="@id/mDetQuantity"
            app:layout_constraintStart_toEndOf="@id/mDetQuantity"
            app:layout_constraintTop_toTopOf="@id/mDetQuantity"
            app:layout_constraintVertical_bias="1.0"
            tools:text="Basmati" />

        <TextView
            android:id="@+id/tv_stock_detail_crop_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/space_half"
            android:maxLines="4"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@id/mCropDesc"
            app:layout_constraintStart_toEndOf="@id/mCropDesc"
            app:layout_constraintTop_toTopOf="@id/mCropDesc"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/mCropDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_crop_type" />


        <TextView
            android:id="@+id/tv_stock_detail_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/quantity2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_crop_description" />

        <TextView
            android:id="@+id/ans_detail_crop_quanity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space"
            android:text="@string/_0_kg"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_stock_detail_quantity"
            app:layout_constraintStart_toEndOf="@id/tv_stock_detail_quantity"
            app:layout_constraintTop_toTopOf="@id/tv_stock_detail_quantity" />

        <TextView
            android:id="@+id/tv_stock_detail_expiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/expiration_date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_quantity" />


        <TextView
            android:id="@+id/ans_detail_crop_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space"
            android:text="@string/_12_4_2005"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_stock_detail_expiration"
            app:layout_constraintStart_toEndOf="@id/tv_stock_detail_expiration"
            app:layout_constraintTop_toTopOf="@id/tv_stock_detail_expiration" />

        <TextView
            android:id="@+id/tv_stock_detail_init_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/date_of_start"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_expiration" />


        <TextView
            android:id="@+id/ans_detail_init_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space"
            android:text="@string/_12_4_2005"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_stock_detail_init_date"
            app:layout_constraintStart_toEndOf="@id/tv_stock_detail_init_date"
            app:layout_constraintTop_toTopOf="@id/tv_stock_detail_init_date" />

        <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/space"
            android:layout_marginBottom="@dimen/space"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ans_detail_init_date" />

        <TextView
            android:id="@+id/mCurrentBid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_half"
            android:gravity="center"
            android:text="@string/current_bid"
            app:layout_constraintEnd_toStartOf="@id/tv_stock_detail_initial_offer_price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v" />


        <TextView
            android:id="@+id/tv_stock_detail_current_bid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_half"
            android:gravity="center"
            android:text="@string/_1234"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/tv_stock_detail_initial_offer_price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mCurrentBid" />

        <TextView
            android:id="@+id/mOfferPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_half"
            android:gravity="center"
            android:text="@string/initial_offer_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv_stock_detail_current_bid"
            app:layout_constraintTop_toBottomOf="@id/v" />


        <TextView
            android:id="@+id/tv_stock_detail_initial_offer_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_half"
            android:gravity="center"
            android:text="@string/_1234"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv_stock_detail_current_bid"
            app:layout_constraintTop_toBottomOf="@id/mOfferPrice" />


        <!--        Add graph-->
        <!--        <com.github.mikephil.charting.charts.LineChart-->
        <!--            android:id="@+id/lineChart"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/space_200"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginEnd="5dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:padding="9dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_initial_offer_price" />-->

        <TextView
            android:id="@+id/tv_view_bid_history_stocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:gravity="center"
            android:text="@string/view_bid_history"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_detail_initial_offer_price" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bidHistory"
            style="@style/styleRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_view_bid_history_stocks"
            tools:listitem="@layout/item_bid_history" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_cancel_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_stock"
            app:backgroundTint="@color/red_A700"
            app:layout_constraintEnd_toStartOf="@id/mtb_modify_stock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_bidHistory" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_modify_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifyStock"
            app:backgroundTint="@color/green_A700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mtb_cancel_stock"
            app:layout_constraintTop_toBottomOf="@id/rv_bidHistory" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>